--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/cli": "~13.3.0",
     "@angular/compiler-cli": "~13.3.0",
     "@types/node": "^12.11.1",
+    "angular-in-memory-web-api": "^0.13.0",
     "typescript": "~4.6.2"
   }
 }
